<resources>
    <string name="app_name">Safood</string>
    <string name="signUp">Sign Up</string>
    <string name="signIn">Sign In</string>
    <string name="slogan">Updated in real time</string>

    /----------main - firstPage with video background---
    <string name="resources">android.resource://</string>
    <string name="video">video</string>
    <string name="setOnErrorListener">setOnErrorListener</string>

    /----------Sign in/ Sign up -----------------------
    <string name="textForProgressBar">Please wait...</string>
    <string name="hintPhone">Phone Number</string>
    <string name="hintPass">Password</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="phone_must_be_10digits">Phone Number must include 10 digits</string>
    <string name="phone_number_format">Phone Number must start with \'05\'</string>
    <string name="phone_must_include_only_digits">Phone Number must include only 10 digits</string>
    <string name="maxPassError">Password max characters is 11!</string>
    <string name="error_empty">Field can\'t be empty</string>
    <string name="confirmationFaild">Confirmation failed</string>
    <string name="wrongPass">Failed to login!wrong password</string>
    <string name="userNotExist">User doesn\'t exist!</string>

    /--------Questaniar-----------------------------------------
    <string name="quest_title">select your interesion content:</string>
    <string name="Vegetarianism">Vegetarianism</string>
    <string name="Infant">Infant</string>
    <string name="Gluten_free">Gluten free</string>
    <string name="Pets">Pets</string>
    <string name="Lactose_free">Lactose free</string>
    <string name="select_all">Select All</string>
    <string name="continue_">Continue</string>
    <string name="def">"none </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="later">Later!</string>
    <string name="first_experience">Lets start!</string>
    <string name="register_successfully_1">You have successfully registered to Safood!</string>
    <string name="register_successfully_2">We hope you get the best out of our app,</string>
    <string name="register_successfully_3">Wishing you lots of health and safe food!</string>

    /----------------fail to connect------------------------
    <string name="fail">fail</string>
    <string name="mustImplement"> must implement FragmentHomeContentListener</string>
    <string name="mustImplementSuccess"> must implement FragmentSucceedListener</string>

    /-------------menu---------------------------------
    <string name="home">Home</string>
    <string name="EditProfile">Edit Profile</string>
    <string name="Definitions">Definitions</string>
    <string name="NotificationHistory">Notification History</string>
    <string name="LogOut">Log Out</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="contactUs">Contact Us, Let Us Know!</string>
    <string name="Contact">Contact:+9742300388,Israel</string>
    <string name="logo">© Safood</string>

    /----------Home Content---------------------------
    <string name="Articles">Food News!find out how to take care about your food</string>
    <string name="All_Notification">All Notifications</string>
    /----------Edit Profile---------------------------
    <string name="phone">Phone Number:</string>
    <string name="password">Password:</string>
    <string name="Update">Update</string>
    <string name="mustImplementEditProfile">must implement EditProfileListener</string>
    <string name="Password">password</string>

    /----------Definitions---------------------------
    <string name="select">Select</string>
    <string name="choice">choice</string>

    /---------Articles-----------------------------
    <string name="Article">Articles</string>
    <string name="Title">Title</string>
    <string name="image">image</string>

    /------Article Info---------------------------
    <string name="btnBack">Back!</string>
    <string name="content">content!</string>

    /-----All Notification------------------------
    <string name="clickReadMore">Click To Read More</string>
    <string name="default_notification_channel_id"
        >Defualt channel id</string>
    <string name="msg_token_fmt">Connect token</string>
</resources>