<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/food"
    tools:context=".QuestActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:gravity="top|center_horizontal"
        android:fontFamily="@font/limelight"
        android:text="@string/app_name"
        android:textColor="@color/darkGray"
        android:textSize="65sp"></TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:gravity="top|center_horizontal"
        android:layout_marginTop="70dp"

        android:fontFamily="@font/bubblegum_sans"
        android:text="@string/slogan"
        android:textColor="@color/darkGray"
        android:textSize="20sp"
        android:textStyle="bold"></TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="100dp"
        android:paddingRight="50dp"
        android:gravity="left|center_vertical"

        android:layout_alignParentLeft="true"
        >  <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="select your interesion content:"
        android:layout_gravity="center_horizontal"></TextView>


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Vegetarianism"
            android:layoutDirection="ltr"
            android:id="@+id/vegetarianism"></CheckBox>


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layoutDirection="ltr"
            android:text="@string/Infant"
            android:id="@+id/infant"
            ></CheckBox>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layoutDirection="ltr"
            android:text="@string/Gluten_free"
            android:id="@+id/gluten_free"></CheckBox>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layoutDirection="ltr"
            android:text="@string/Pets"
            android:id="@+id/pets">

        </CheckBox>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layoutDirection="ltr"
            android:text="@string/Lactose_free"
            android:id="@+id/lactose_free"></CheckBox>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:paddingBottom="45dp"
        android:weightSum="2">
        <Button
            android:id="@+id/btnSelectAll"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="100dp"
            android:layout_weight="1"
            android:background="@drawable/custom_btn_signup"
            android:text="@string/select_all"
            android:textAllCaps="false"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:textColor="@color/darkGray"
            android:theme="@style/ButtonColor3" />
        <Button
            android:id="@+id/btnContinue"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="100dp"
            android:layout_weight="1"
            android:background="@drawable/custom_btn_signup"
            android:text="@string/continue_"
            android:textAllCaps="false"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:textColor="@color/darkGray"
            android:theme="@style/ButtonColor" />
    </LinearLayout>

</RelativeLayout>