<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/food"
    tools:context=".SignIn_Activity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/limelight"
            android:gravity="top|center_horizontal"
            android:text="@string/app_name"
            android:textColor="@color/darkGray"
            android:textSize="65sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:gravity="top|center_horizontal"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/bubblegum_sans"
            android:text="@string/slogan"
            android:textColor="@color/darkGray"
            android:textSize="20sp"
            android:textStyle="bold"></TextView>
    </RelativeLayout>


    <TextView
        android:layout_width="98dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:gravity="top|center_horizontal"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/bubblegum_sans"
        android:text="@string/signIn"
        android:textColor="@color/darkGray"
        android:textSize="30sp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="180dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background='@drawable/background_for_signin'
        >

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtPhone"
            android:hint="@string/hintPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:inputType="phone"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="10"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true">

        </com.rengwuxian.materialedittext.MaterialEditText>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtPassword"
            android:hint="@string/hintPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:inputType="textPassword"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="11"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true">
        </com.rengwuxian.materialedittext.MaterialEditText>

    </LinearLayout>

    <Button
        android:id="@+id/btnSignIn2"
        android:layout_height="wrap_content"
        android:text="@string/signIn"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:layout_width="match_parent"
        android:textColor="@color/darkGray"
        android:background="@drawable/custom_btn_signin_second"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        android:theme="@style/ButtonColor"
        />
</RelativeLayout>