<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <VideoView
        android:id="@+id/videoView"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        ></VideoView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="86dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="85dp"
        android:layout_marginRight="60dp"
        android:fontFamily="@font/limelight"
        android:text="@string/app_name"
        android:textColor="@color/darkGray"
        android:textSize="65sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="133dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="130dp"
        android:layout_marginRight="90dp"
        android:fontFamily="@font/bubblegum_sans"
        android:text="@string/slogan"
        android:textColor="@color/darkGray"
        android:textSize="20sp"
        android:textStyle="bold"></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:paddingBottom="45dp"
        android:weightSum="2">

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="100dp"
            android:layout_weight="1"
            android:background="@drawable/custom_btn_signup"
            android:text="@string/signUp"
            android:textAllCaps="false"
            android:textColor="@color/darkGray"
            android:theme="@style/ButtonColor" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="100dp"
            android:layout_weight="1"
            android:background="@drawable/custom_btn_signin"
            android:text="@string/signIn"
            android:textAllCaps="false"
            android:textColor="@color/darkGray"
            android:theme="@style/ButtonColor2" />

    </LinearLayout>

</RelativeLayout>