<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/food"
    tools:context=".SignUp_Activity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="87dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="84dp"
        android:layout_marginRight="60dp"
        android:fontFamily="@font/limelight"
        android:text="@string/app_name"
        android:textColor="@color/darkGray"
        android:textSize="65sp"></TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="129dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="134dp"
        android:layout_marginRight="90dp"
        android:fontFamily="@font/bubblegum_sans"
        android:text="@string/slogan"
        android:textColor="@color/darkGray"
        android:textSize="20sp"
        android:textStyle="bold"></TextView>

    <TextView
        android:layout_width="98dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="154dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="159dp"
        android:layout_marginRight="60dp"
        android:fontFamily="@font/bubblegum_sans"
        android:text="@string/signUp"
        android:textColor="@color/darkGray"
        android:textSize="30sp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="280dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background='@drawable/background_for_signin'
        >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtPhone"
            app:errorEnabled="true"
            android:textColorHint="@color/white"
            android:theme="@style/textInput"
            app:counterMaxLength="10">
            <com.google.android.material.textfield.TextInputEditText
                android:hint="@string/hintPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:textColorHint="@android:color/tertiary_text_light"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:background="@drawable/edt_bg_selector"
                android:theme="@style/textInput"
                >

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            app:errorEnabled="true"
            app:counterMaxLength="11"
            android:theme="@style/textInput"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintPass"
                android:inputType="textPassword"
                android:textColorHint="@android:color/tertiary_text_light"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:background="@drawable/edt_bg_selector"
                android:theme="@style/textInput"
                ></com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtPassword3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            app:errorEnabled="true"
            app:counterMaxLength="11"
            android:theme="@style/textInput"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirmPass"
                android:inputType="textPassword"
                android:textColorHint="@android:color/tertiary_text_light"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:background="@drawable/edt_bg_selector"
                android:theme="@style/textInput"
                ></com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnSignUp2"
        android:layout_height="wrap_content"
        android:text="@string/signUp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:textColor="@color/darkGray"
        android:background="@drawable/custom_btn_signup"
        android:theme="@style/ButtonColor"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>